--- a/themes/custom.v2/login/resources/css/forgot-password.css
+++ b/themes/custom.v2/login/resources/css/forgot-password.css
@@ -9,22 +9,25 @@
 }
 
 .forgot-password-card {
-    width: 400px;
-    padding: 2rem;
-    background: var(--card-bg-color);
-    border-radius: 12px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    border-radius: 8px;
+    padding: 32px;
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.06);
     text-align: center;
+    border: solid #E2E8F0 1px;
 }
 
-h2 {
-    font-size: 24px;
-    color: var(--primary-color);
+.header {
+    font-size: 28px;
+    color: var(--text-color);
+    font-weight: 600;
     margin-bottom: 1rem;
 }
 
-p {
-    font-size: 14px;
+.sub-header {
+    font-size: 16px;
     color: var(--text-secondary-color);
     margin-bottom: 1rem;
 }
@@ -75,6 +78,11 @@ input {
 .back-to-login a {
     color: var(--primary-color);
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    justify-content: center;
+    gap:10px
 }
 
 .back-to-login a:hover {
