--- a/themes/custom.v2/login/resources/css/common.css
+++ b/themes/custom.v2/login/resources/css/common.css
@@ -53,3 +53,19 @@ html, body {
 .primary-button:hover {
     background-color: var(--primary-hover-color);
 }
+
+
+.error-message{
+  color: var(--error-color);
+  text-align: left;
+  margin: 0;
+  font-size: 13px;
+  font-weight: 500;
+  margin-top: 4px;
+}
+
+.error-input{
+  outline: none;
+  border: solid var(--error-color) 1px !important;
+  box-shadow: 0px 0px 4px 0px var(--error-color);
+}
