--- a/themes/custom.v2/login/resources/css/reset-password.css
+++ b/themes/custom.v2/login/resources/css/reset-password.css
@@ -1,90 +1,27 @@
-@import url('variables.css');
+@import url("variables.css");
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: var(--background-color);
-}
-
-.forgot-password-card {
-    background-color: #ffffff;
-    border-radius: 8px;
-    padding: 32px;
-    width: 100%;
-    max-width: 400px;
-    box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.06);
-    text-align: center;
-    border: solid #E2E8F0 1px;
-}
-
-.header {
-    font-size: 28px;
-    color: var(--text-color);
-    font-weight: 600;
-    margin-bottom: 1rem;
-}
-
-.sub-header {
-    font-size: 16px;
-    color: var(--text-secondary-color);
-    margin-bottom: 1rem;
-}
-
-.form-group {
-    text-align: left;
-    margin-bottom: 1rem;
-}
-
-label {
-    display: block;
-    font-size: 14px;
-    color: var(--text-secondary-color);
-    margin-bottom: 0.5rem;
-}
-
-input {
-    width: 100%;
-    padding: 0.8rem;
-    border: 1px solid var(--border-color);
-    border-radius: 6px;
-    font-size: 16px;
-    background-color: var(--card-bg-color);
-    color: var(--text-color);
-}
-
-.btn-primary {
-    width: 100%;
-    padding: 0.8rem;
-    font-size: 16px;
-    font-weight: bold;
-    color: var(--button-text);
-    background: var(--primary-color);
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.btn-primary:hover {
-    background: var(--primary-hover-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: var(--background-color);
 }
 
 .back-to-login {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .back-to-login a {
-    color: var(--primary-color);
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    justify-content: center;
-    gap:10px
+  color: var(--primary-color);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  justify-content: center;
+  gap: 10px;
 }
 
 .back-to-login a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
