--- a/themes/custom.v2/login/resources/css/update-password.css
+++ b/themes/custom.v2/login/resources/css/update-password.css
@@ -1,78 +1,80 @@
+@import url("variables.css");
+
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f8f9fa;
-  }
-  
-  .reset-password-card {
-    background: #fff;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 350px;
-  }
-  
-  .success-message {
-    display: none;
-    background: #fff;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 350px;
-  }
-  
-  .header {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-  }
-  
-  .sub-header {
-    color: #666;
-    font-size: 0.9rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  .form-group {
-    margin-bottom: 1rem;
-    text-align: left;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .error-message {
-    color: red;
-    font-size: 0.85rem;
-    margin-top: 0.25rem;
-  }
-  
-  .primary-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    border: none;
-    color: white;
-    font-size: 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .primary-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .success-icon {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 1rem;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f8f9fa;
+}
+
+.reset-password-card {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 350px;
+}
+
+.success-message {
+  display: none;
+  background: #fff;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 350px;
+}
+
+.error-message {
+  color: red;
+  font-size: 0.85rem;
+  margin-top: 0.25rem;
+}
+
+.success-icon {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 1rem;
+}
+
+/* Validator styles */
+.password-validator {
+  padding: 0;
+  margin: 10px 0;
+}
+
+.validator-item {
+  font-size: 13px;
+  text-align: left;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.password-validator li::before {
+  content: "⚪"; /* Default state */
+  position: absolute;
+  left: 0;
+  font-size: 14px;
+}
+
+/* Valid state */
+.password-validator .valid {
+  color: var(--success-color);
+}
+
+/* Invalid state */
+.password-validator .invalid {
+  color: #64748b;
+}
+
+.valid > .invalid-img {
+  display: none;
+}
+
+.invalid > .valid-img {
+  display: none;
+}
