add update password action

--- a/themes/custom.v2/login/resources/css/update-password.css
+++ b/themes/custom.v2/login/resources/css/update-password.css
@@ -78,3 +78,21 @@
 .invalid > .valid-img {
   display: none;
 }
+
+.back-to-login {
+  margin-top: 1rem;
+}
+
+.back-to-login a {
+  color: var(--primary-color);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  justify-content: center;
+  gap: 10px;
+}
+
+.back-to-login a:hover {
+  text-decoration: underline;
+}
